-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 9, 10
-
Component/s: hotspot
-
b06
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8219984 | 11.0.4 | Igor Ignatyev | P3 | Resolved | Fixed | b01 |
This failure can not be seen when HotSpot GTest native unit tests are executed in a default order.
However, if they are executed in one-by-one mode, each test being launched stand-alone, a number of tests fail (about 40).
This will turn into a "real" visible problem if one of the tests is excluded from execution, or default order otherwise changes. Also, if developer(s) execute a subset of tests, or a single test, they will be surprised why they fail, while nightly/tiered testing does not report these failures.
However, if they are executed in one-by-one mode, each test being launched stand-alone, a number of tests fail (about 40).
This will turn into a "real" visible problem if one of the tests is excluded from execution, or default order otherwise changes. Also, if developer(s) execute a subset of tests, or a single test, they will be surprised why they fail, while nightly/tiered testing does not report these failures.
- backported by
-
JDK-8219984 [TESTBUG] A number of native hotspot unit tests fail when executed in stand-alone mode
-
- Resolved
-
- relates to
-
JDK-8166925 several native TESTs should be changed to TEST_VM
-
- Resolved
-