8174691: [TESTBUG] A number of native hotspot unit tests fail when executed in stand-alone mode

Reviewed-by: kvn, tschatzl